Feature: Added some more documentations for bnd.bnd instructions

--- a/src/main/resources/BndDocumentationBundle.properties
+++ b/src/main/resources/BndDocumentationBundle.properties
@@ -23,6 +23,8 @@ Fragment-Host=The Fragment-Host header defines the host bundles for this fragmen
 Import-Package=The Import-Package header declares the imported packages for this bundle.
 Include-Resource=Includes resources, see -includeresource
 Liferay-Configuration-Path=Imports configurations located inside that directory into the OSGi runtime by using the configuration-admin-service itself.
+Liferay-Icons-Pack-Name=Name of a custom icon pack
+Liferay-Icons-Path=Path to a set of *.svg files to be used in a custom icon pack
 Liferay-JS-Config=Points to the configuration file that contains the module's definition
 Liferay-Require-SchemaVersion=The Liferay-Require-SchemaVersion header defines the current DB schema version number for your service modules. This version number should be incremented as you change your service.xml in preparation for a release.
 Liferay-Service=The module provides a Liferay Service
@@ -37,6 +39,7 @@ Service-Component=XML documents containing component descriptions must be specif
 Test-Cases=Header to automatically execute tests in the bnd JUnit tester
 Tool=Bnd version used to build this bundle
 Web-ContextPath=Defines the (servlet) context of the module
+-add-resource=Provide a path to precompiled JSPs that should be included in the bundle
 -augment=Add requirements and capabilities to the resources during resolving.
 -baseline=Control what bundles are enabled for baselining and optionally specify the baseline version or file.
 -baselinerepo=Define the repository to calculate baselining against
@@ -84,6 +87,7 @@ Web-ContextPath=Defines the (servlet) context of the module
 -javaagent=Specify if classpath jars with Premain-Class headers are to be used as java agents
 -jsp=Tell the JSP plugin where to find JSP files
 -library=Apply a bnd library to the workspace, project, or bndrun file
+-liferay-aggregate-resource-bundles=Aggregate resource bundle from other bundles into this module
 -make=If a resource is not found, specify a recipe to make it.
 -manifest=Override manifest calculation and set fixed manifest
 -manifest-name=Set the resource path to the manifest, for certain standards the manifest has a different name.
@@ -153,6 +157,7 @@ Web-ContextPath=Defines the (servlet) context of the module
 -runsystempackages=Define extra system packages (packages exported from the remote VM -runpath).
 -runtrace=Trace the launched process in detail
 -runvm=Additional arguments for the VM invocation. Arguments are added as-is.
+-sass=Tell the SASS plugin where to look for /.sass-cache/
 -savemanifest=Write out the manifest to a separate file after it has been calculated.
 -sign=Report any entries that were added to the build since the last JAR was made.
 -snapshot=String to substitute for "SNAPSHOT" in the bundle version's qualifier
