--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -60,7 +60,7 @@
             <li>Feature: Add freemarker support for fragment html files</li>
             <li>Feature: File references in fragment.json file</li>
             <li>Feature: Add support for comments in bnd.bnd files</li>
-            <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additonal attributes (like "use" or "require")</li>
+            <li>Bugfix: Exception when trying to inject Javascript inside aui:script-tags containing additional attributes (like "use" or "require")</li>
             <li>Bugfix: Avoid NullPointerException when trying to lookup documentation for an unknown OSGi property</li>
             <li>Bugfix: Inner classes where not properly resolved inside className attributes in JSP files</li>
             <li>Change: Fixed support for IntelliJ 2021.3</li>
@@ -186,7 +186,7 @@
             <li>Feature: Added taglib code completion for class names</li>
             <li>Feature: Class Name completion inside serviceLocator.findService(), enumUtil, staticUtil and staticFieldGetter in Freemarker templates</li>
             <li>Feature: Implicit resolve of serviceLocator, enumUtil and staticUtil instructions in Freemarker templates</li>
-            <li>Feature: Inpsections for JSP files</li>
+            <li>Feature: Inspections for JSP files</li>
         </ul>
         <p>Version 0.0.2</p>
         <ul>
@@ -320,5 +320,4 @@
         <listener class="de.dm.intellij.liferay.resourcesimporter.LiferayAdvancedResourcesImporterBndParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
         <listener class="de.dm.intellij.liferay.resourcesimporter.LiferayAdvancedResourcesImporterServiceCallWatcher" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
     </applicationListeners>
-
 </idea-plugin>
