Feature: Ability to compare theme files with the original files from the parent theme (WIP)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,7 @@
     <change-notes><![CDATA[
         <p>Version 0.0.15</p>
         <ul>
+            <li>Feature: Ability to compare theme files with the original files from the parent theme</li>
         </ul>
 
         <p>Version 0.0.14</p>
@@ -310,6 +311,13 @@
         <projectResolve implementation="de.dm.intellij.liferay.gradle.LiferayBundleSupportGradleProjectResolver" />
     </extensions>
 
+    <actions>
+        <action id="de.dm.intellij.liferay.action.ShowThemeDiffAction"
+                class="de.dm.intellij.liferay.action.ShowThemeDiffAction" icon="/com/liferay/icons/liferay.png">
+            <add-to-group group-id="ProjectViewPopupMenu" relative-to-action="CompareFileWithEditor" anchor="after"/>
+        </action>
+    </actions>
+
     <projectListeners>
         <listener class="de.dm.intellij.liferay.module.LiferayModuleListener" topic="com.intellij.openapi.project.ModuleListener" />
         <listener class="de.dm.intellij.liferay.resourcesimporter.LiferayAdvancedResourcesImporterServiceCallModuleListener" topic="com.intellij.openapi.project.ModuleListener" />
@@ -324,4 +332,6 @@
         <listener class="de.dm.intellij.liferay.resourcesimporter.LiferayAdvancedResourcesImporterBndParser" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
         <listener class="de.dm.intellij.liferay.resourcesimporter.LiferayAdvancedResourcesImporterServiceCallWatcher" topic="com.intellij.openapi.vfs.newvfs.BulkFileListener" />
     </applicationListeners>
+
+    <resource-bundle>messages.BasicActionsBundle</resource-bundle>
 </idea-plugin>
