--- a/src/main/resources/messages/BasicActionsBundle.properties
+++ b/src/main/resources/messages/BasicActionsBundle.properties
@@ -1,2 +1,4 @@
 action.de.dm.intellij.liferay.action.ShowHookFragmentDiffAction.text=Compare with Liferay Original File
 action.de.dm.intellij.liferay.action.ShowHookFragmentDiffAction.description=Compares the current file with the original file from Liferay
+action.de.dm.intellij.liferay.action.ShowThemeDiffAction.text=Compare with Original Theme File
+action.de.dm.intellij.liferay.action.ShowThemeDiffAction.description=Compares the current file with the file from the original theme
