--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,6 +29,7 @@
         <ul>
             <li>Feature: Ability to compare theme files with the original files from the parent theme</li>
             <li>Feature: Resolve configurationPid OSGi properties to configuration interface classes</li>
+            <li>Feature: Add inspection to check if a Meta Configuration ID matches the full qualified classname of the interface</li>
             <li>Bugfix: Fix compatibility with IntelliJ 2022.2.3+</li>
         </ul>
 
