Feature: Resolve configurationPid OSGi properties to configuration interface classes (show current value as suggestion in rename dialog)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -302,6 +302,7 @@
         <renamePsiElementProcessor implementation="de.dm.intellij.liferay.language.osgi.RenameMetaConfigurationProcessor" />
         <renameHandler implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationRenameHandler"/>
         <renameInputValidator implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationRenameInputValidator" />
+        <elementDescriptionProvider implementation="de.dm.intellij.liferay.language.osgi.MetaConfigurationElementDescriptionProvider" />
     </extensions>
 
     <extensions defaultExtensionNs="org.jetbrains.idea.maven">
