--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,7 +30,7 @@
             <li>Feature: Ability to compare theme files with the original files from the parent theme</li>
             <li>Feature: Resolve configurationPid OSGi properties to configuration interface classes</li>
             <li>Feature: Add inspection to check if a Meta Configuration ID matches the full qualified classname of the interface</li>
-            <li>Bugfix: Fix compatibility with IntelliJ 2022.2.3+</li>
+            <li>Change: Update support for IntelliJ 2022.3, dropped support for older versions</li>
         </ul>
 
         <p>Version 0.0.14</p>
