--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ apply plugin: 'java'
 sourceCompatibility = 1.17
 
 tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "-Xlint:unchecked"
+    options.deprecation = true
     options.encoding = 'UTF-8'
 }
 
