Change: Remove inspection about aui:fieldset must be inside an aui:fieldset-group (tag has been removed in Liferay lately)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
             <li>Feature: Ability to compare theme files with the original files from the parent theme</li>
             <li>Feature: Resolve configurationPid OSGi properties to configuration interface classes</li>
             <li>Feature: Add inspection to check if a Meta Configuration ID matches the full qualified classname of the interface</li>
+            <li>Change: Remove inspection about aui:fieldset must be inside an aui:fieldset-group (tag has been removed in Liferay lately)</li>
             <li>Change: Update support for IntelliJ 2022.3, dropped support for older versions</li>
         </ul>
 
