--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,8 @@
             <li>Feature: Add inspection to check if a Meta Configuration ID matches the full qualified classname of the interface</li>
             <li>Change: Remove inspection about aui:fieldset must be inside an aui:fieldset-group (tag has been removed in Liferay lately)</li>
             <li>Change: Update support for IntelliJ 2022.3, dropped support for older versions</li>
+            <li>Change: Disabled gradle importers for bundle-support and theme plugins (no longer working with Java 17)</li>
+            <li>Bugfix: Setting Freemarker Breakpoint in Application Display Templates with filenames containing spaces did not work</li>
         </ul>
 
         <p>Version 0.0.14</p>
@@ -319,10 +321,16 @@
 
     <extensions defaultExtensionNs="org.jetbrains.plugins.gradle">
         <!-- Extract parent Theme information from a gradle based project (based on the com.liferay.gradle.plugins.theme.builder configuration) -->
+        <!-- TODO not working for projects using Java below 17 ? -->
+        <!--
         <projectResolve implementation="de.dm.intellij.liferay.gradle.LiferayThemeBuilderGradleProjectResolver" />
+        -->
 
         <!-- A gradle project resolver which resolves the Liferay Home directory if the bundle-support plugin is present and will "exclude" the bundles folder from indexing in IntelliJ IDEA -->
+        <!-- TODO not working for projects using Java below 17 ? -->
+        <!--
         <projectResolve implementation="de.dm.intellij.liferay.gradle.LiferayBundleSupportGradleProjectResolver" />
+        -->
     </extensions>
 
     <projectListeners>
