--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
   - openjdk17
 dist: trusty
-script: build buildPlugin
+script: ./gradlew build buildPlugin
 deploy:
   provider: releases
   overwrite: true
